api of ml model is created

--- a/ml-model/train_model.ipynb
+++ b/ml-model/train_model.ipynb
@@ -341,8 +341,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "208f595b-94b5-4c03-ae1d-a1f2caf9a9db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('psoriasis_severity_model.h5')\n",
+    "print(\"✅ Model saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fac947d4-a0a9-41e5-8724-5b6742ec2c4a",
    "metadata": {},
    "outputs": [],
    "source": []
